--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="shortcut icon" href="/asset/images/logo 1.png">
+        <link rel="shortcut icon" href="./asset/images/logo 1.png">
 
         <title>Mo Loading</title>
     </head>
