--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="shortcut icon" href="./asset/images/logo 1.png">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
         <title>Mo Loading</title>
     </head>
     <body>
