init new design

--- a/index.html
+++ b/index.html
@@ -5,45 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="shortcut icon" href="./asset/images/logo 1.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="./asset/images/Logo.png">
+
         <title>Mo Loading</title>
     </head>
     <body>
-        <div class="container">
-            <img src="./asset/images/logo 1.png" alt="">
-            <h1>Welcome👋🏿</h1>
-            <h4>This website is currently in the works👷🏿‍♂️. <br> Get ready to
-                experience
-                some 🆒, innovative👨🏿‍💻, and creatively✨ crafted content
-                soon.<br> Stay
-                tuned⏳, we're cooking up something amazing🤩 for you!🔨</h4>
-            <div class="social-media">
-                <a href="https://www.linkedin.com/in/modouaicha023/"><img
-                        class="social-icon" src="./asset/images/linkedin.png"
-                        alt=""></a>
-                <a href="https://github.com/modouaicha023"><img
-                        class="social-icon" src="./asset/images/github.png"
-                        alt=""></a>
-                <a href="mailto:modouaichadiop@gmail.com"><img
-                        class="social-icon" src="./asset/images/gmail.png"
-                        alt=""></a>
-
-                <a href="https://twitter.com/modouaicha023"><img
-                        class="social-icon" src="./asset/images/twitter.png"
-                        alt=""></a>
-                <a href="https://instagram.com/modouaicha023"><img
-                        class="social-icon" src="./asset/images/instagram.png"
-                        alt=""></a>
-                <a href="https://www.behance.net/modouaicha023"><img
-                        class="social-icon" src="./asset/images/behance.png"
-                        alt=""></a>
-            </div>
-            <div class="counter">0%</div>
-            <hr class="loading-bar-back">
-            <hr class="loading-bar-front">
+        <div class="containerGlobal">
+            <div class="column" id="column1"></div>
+            <div class="column" id="column2 "></div>
         </div>
 
         <script src="./js/index.js">
