--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./asset/images/Logo.png">
     <title>Mo Loading</title>
 </head>
@@ -42,9 +43,13 @@
                 </div>
             </header>
             <div class="content-block-item" id="content-space1"></div>
-            <div class="content-block-item" id="main1"></div>
+            <div class="content-block-item" id="main1">
+                <p>Coming Soon</p>
+            </div>
             <div class="content-block-item" id="content-space2"></div>
-            <div class="content-block-item" id="main2"></div>
+            <div class="content-block-item" id="main2">
+                <p>Coming Soon</p>
+            </div>
             <div class="content-block-item" id="content-margin2"></div>
         </div>
 
