--- a/index.html
+++ b/index.html
@@ -1,53 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="shortcut icon" href="./asset/images/logo 1.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-        <title>Mo Loading</title>
-    </head>
-    <body>
-        <div class="container">
-            <img src="./asset/images/logo 1.png" alt="">
-            <h1>Welcome👋🏿</h1>
-            <h4>This website is currently in the works👷🏿‍♂️. <br> Get ready to
-                experience
-                some 🆒, innovative👨🏿‍💻, and creatively✨ crafted content
-                soon.<br> Stay
-                tuned⏳, we're cooking up something amazing🤩 for you!🔨</h4>
-            <div class="social-media">
-                <a href="https://www.linkedin.com/in/modouaicha023/"><img
-                        class="social-icon" src="./asset/images/linkedin.png"
-                        alt=""></a>
-                <a href="https://github.com/modouaicha023"><img
-                        class="social-icon" src="./asset/images/github.png"
-                        alt=""></a>
-                <a href="mailto:modouaichadiop@gmail.com"><img
-                        class="social-icon" src="./asset/images/gmail.png"
-                        alt=""></a>
 
-                <a href="https://twitter.com/modouaicha023"><img
-                        class="social-icon" src="./asset/images/twitter.png"
-                        alt=""></a>
-                <a href="https://instagram.com/modouaicha023"><img
-                        class="social-icon" src="./asset/images/instagram.png"
-                        alt=""></a>
-                <a href="https://www.behance.net/modouaicha023"><img
-                        class="social-icon" src="./asset/images/behance.png"
-                        alt=""></a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="shortcut icon" href="./asset/images/Logo.png">
+    <title>Mo Loading</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="outer-grid" id="border-left"></div>
+
+        <div class="outer-grid inner-grid" id="main-content">
+            <div class="content-block-item" id="content-margin1"></div>
+            <header class="content-block-item" id="header">
+                <a href="#">
+                    <div class="logoContainter">
+                        <img src="asset/images/Logo.png" width="32" height="32" alt="">
+                        <p id="textLogo">MODOU AICHA</p>
+                    </div>
+                </a>
+                <nav class="navbar">
+                    <a href="#" id="home">
+                        <span class="slash">/</span>
+                        <div class="home1">h</div>
+                        <div class="home2">o</div>
+                        <div class="home3">m</div>
+                        <div class="home4">e</div>
+                    </a>
+                    <a href="#"><span class="slash">/</span>about</a>
+                    <a href="#"><span class="slash">/</span>blogs</a>
+                    <a href="#"><span class="slash">/</span>projects</a>
+                    <a href="#"><span class="slash">/</span>contact</a>
+                </nav>
+                <div class="menu">
+                    <a href="#"> <img src="./asset/images/menu.png" alt="menu button" width="32px" height="32px"></a>
+                </div>
+            </header>
+            <div class="content-block-item" id="content-space1"></div>
+            <div class="content-block-item" id="main1">
+                <p>Coming Soon</p>
             </div>
-            <div class="counter">0%</div>
-            <hr class="loading-bar-back">
-            <hr class="loading-bar-front">
+            <div class="content-block-item" id="content-space2"></div>
+            <div class="content-block-item" id="main2">
+                <p>Coming Soon</p>
+            </div>
+            <div class="content-block-item" id="content-margin2"></div>
         </div>
 
-        <script src="./js/index.js">
+        <div class="outer-grid" id="border-right"></div>
+    </div>
+</body>
 
-    </script>
-    </body>
 </html>
+<!-- <header class="containerGlobal">
+    <div class="column" id="column1">
+        <div class="logoContainter">
+            <img src="asset/images/Logo.png" width="32" height="32" alt="">
+            <p id="textLogo">MODOU AICHA</p>
+        </div>
+    </div>
+    <nav class="column" id="column2 "></nav>
+</header> -->
