--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@
                 </div>
             </header>
             <div class="content-block-item" id="content-space1"></div>
+
+
+            <div class="content-block-item" id="main1">
+                <div class="social-media">
+                    <a href="https://www.linkedin.com/in/modouaicha023/"><img class="social-icon"
+                            src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png"
+                            alt="Linkedin" width="50" height="50"></a>
+
+                    <a href="https://github.com/modouaicha023"><img class="social-icon"
+                            src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="50" height="50"
+                            alt="Github"></a>
+
+                    <a href="mailto:modouaichadiop@gmail.com"><img class="social-icon"
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/1024px-Gmail_icon_%282020%29.svg.png"
+                            alt="Gmail" width="50px" height="50px"></a>
+
+                    <a href="https://twitter.com/modouaicha023"><img class="social-icon"
+                            src="https://cdn-icons-png.flaticon.com/512/3670/3670151.png" width="50" height="50"
+                            alt="Twitter"></a>
+                    <a href="https://instagram.com/modouaicha023"><img class="social-icon"
+                            src="https://cdn-icons-png.flaticon.com/512/4138/4138124.png" width="50" height="50"
+                            alt="Instagram"></a>
+                    <a href="https://www.behance.net/modouaicha023"><img class="social-icon"
+                            src="https://cdn-icons-png.flaticon.com/512/145/145799.png" width="50" height="50"
+                            alt="Behance"></a>
+                </div>
+            </div>
+
+            <div class="content-block-item" id="content-space2"></div>
+
+            <div class="content-block-item" id="main2">
+                <p>Coming Soon</p>
+            </div>
+
+
             <div class="content-block-item" id="main1">
                 <p>Coming Soon</p>
             </div>
@@ -50,6 +85,7 @@
             <div class="content-block-item" id="main2">
                 <p>Coming Soon</p>
             </div>
+
             <div class="content-block-item" id="content-margin2"></div>
         </div>
 
