--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/1024px-Gmail_icon_%282020%29.svg.png"
                             alt="Gmail" width="50px" height="50px"></a>
 
-                    <a href="https://twitter.com/modouaicha023"><img class="social-icon"
-                            src="https://cdn-icons-png.flaticon.com/512/3670/3670151.png" width="50" height="50"
+                    <a href="https://x.com/modouaicha023"><img class="social-icon"
+                            src="https://user-images.githubusercontent.com/8138585/255580473-e9e13421-89cf-445b-b2e2-e50e0864789f.svg" width="50" height="50"
                             alt="Twitter"></a>
                     <a href="https://instagram.com/modouaicha023"><img class="social-icon"
                             src="https://cdn-icons-png.flaticon.com/512/4138/4138124.png" width="50" height="50"
