--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="shortcut icon" href="./asset/images/Logo.png">
     <title>Mo Loading</title>
 </head>
@@ -15,34 +16,43 @@
 <body>
     <header>
         <a href="#">
-            <img src="asset/images/Logo.png" width="32" height="32" alt="">
+            <img id="avatar" src="asset/images/Logo.png" alt="avatar">
         </a>
-        <div class="menu">
-            <a href="#"> <img src="./asset/images/menu.png" alt="menu button" width="32px" height="32px"></a>
-        </div>
+        <a href="#">
+            <img id="menu-img" src="./asset/images/menu.png" alt="menu button">
+        </a>
     </header>
     <main>
-        <section id="main1">
+        <section id="home">
+            <h2>
+                Hi, I’m Modou Aicha Diop a developer with experience in frontEnd && backEnd developement.
+            </h2>
+        </section>
+        <section id="about">
+            <h2>ABOUT</h2>
             <p>
-                Hi, I’m Modou Aicha Diop a developer living in Dakar, Senegal <br> with experience in frontEnd &&
-                backEnd
-                developement.
             </p>
         </section>
-        <section id="main2">
-            <p> Hi, I’m Modou Aicha Diop a developer living in Dakar, Senegal Lorem ipsum dolor sit, amet consectetur
-                adipisicing elit. Sed vero, hic ducimus saepe mollitia libero, unde illo error alias eaque dolorum
-                beatae. Illum at sequi expedita. Cupiditate accusantium aliquid hic.
-            </p>
+        <section id="stack">
+            <h2>Tech Stacks</h2>
         </section>
-        <section id="main3"><p>adipisicing elit. Sed vero, hic ducimus saepe mollitia libero, unde illo error alias eaque dolorum
-                beatae. Illum at sequi expedita. Cupiditate accusantium aliquid hic.</p></section>
-        <section id="main4"><p>adipisicing elit. Sed vero, hic ducimus saepe mollitia libero, unde illo error alias eaque dolorum
-                beatae. Illum at sequi expedita. Cupiditate accusantium aliquid hic.</p></section>
-        <section id="main5"><p>adipisicing elit. Sed vero, hic ducimus saepe mollitia libero, unde illo error alias eaque dolorum
-                beatae. Illum at sequi expedita. Cupiditate accusantium aliquid hic.</p></section>
+        <section id="projects">
+            <h2>PROJECTS</h2>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+        </section>
+        <section id="blog">
+            <h2>BLOG</h2>
+        </section>
+        <section id="contact">
+            <h2>
+                CONTACT
+            </h2>
+        </section>
     </main>
     <footer></footer>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
