--- a/index.html
+++ b/index.html
@@ -6,94 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="shortcut icon" href="./asset/images/Logo.png">
     <title>Mo Loading</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="outer-grid" id="border-left"></div>
+    <header>
+        <a href="#">
+            <img id="avatar" src="asset/images/Logo.png" alt="avatar">
+        </a>
+        <a href="#">
+            <img id="menu-img" src="./asset/images/menu.png" alt="menu button">
+        </a>
+    </header>
+    <main>
+        <section id="home">
+            <h2>
+                Hi, I’m Modou Aicha Diop a developer with experience in frontEnd && backEnd developement.
+            </h2>
+        </section>
+        <section id="about">
+            <h2>ABOUT</h2>
+            <p>
+            </p>
+        </section>
+        <section id="stack">
+            <h2>Tech Stacks</h2>
+        </section>
+        <section id="projects">
+            <h2>PROJECTS</h2>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+        </section>
+        <section id="blog">
+            <h2>BLOG</h2>
+        </section>
+        <section id="contact">
+            <h2>
+                CONTACT
+            </h2>
+        </section>
+    </main>
+    <footer></footer>
+    <script src="./js/index.js"></script>
 
-        <div class="outer-grid inner-grid" id="main-content">
-            <div class="content-block-item" id="content-margin1"></div>
-            <header class="content-block-item" id="header">
-                <a href="#">
-                    <div class="logoContainter">
-                        <img src="asset/images/Logo.png" width="32" height="32" alt="">
-                        <p id="textLogo">MODOU AICHA</p>
-                    </div>
-                </a>
-                <nav class="navbar">
-                    <a href="#" id="home">
-                        <span class="slash">/</span>
-                        <div class="home1">h</div>
-                        <div class="home2">o</div>
-                        <div class="home3">m</div>
-                        <div class="home4">e</div>
-                    </a>
-                    <a href="#"><span class="slash">/</span>about</a>
-                    <a href="#"><span class="slash">/</span>blogs</a>
-                    <a href="#"><span class="slash">/</span>projects</a>
-                    <a href="#"><span class="slash">/</span>contact</a>
-                </nav>
-                <div class="menu">
-                    <a href="#"> <img src="./asset/images/menu.png" alt="menu button" width="32px" height="32px"></a>
-                </div>
-            </header>
-            <div class="content-block-item" id="content-space1"></div>
-
-            <div class="content-block-item" id="main1">
-                <div class="social-media">
-                    <a href="https://www.linkedin.com/in/modouaicha023/"><img class="social-icon"
-                            src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png"
-                            alt="Linkedin" width="50" height="50"></a>
-
-                    <a href="https://github.com/modouaicha023"><img class="social-icon"
-                            src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="50" height="50"
-                            alt="Github"></a>
-
-                    <a href="mailto:modouaichadiop@gmail.com"><img class="social-icon"
-                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/1024px-Gmail_icon_%282020%29.svg.png"
-                            alt="Gmail" width="50px" height="50px"></a>
-
-                    <a href="https://x.com/modouaicha023"><img class="social-icon"
-                            src="https://user-images.githubusercontent.com/8138585/255580473-e9e13421-89cf-445b-b2e2-e50e0864789f.svg" width="50" height="50"
-                            alt="Twitter"></a>
-                    <a href="https://instagram.com/modouaicha023"><img class="social-icon"
-                            src="https://cdn-icons-png.flaticon.com/512/4138/4138124.png" width="50" height="50"
-                            alt="Instagram"></a>
-                    <a href="https://www.behance.net/modouaicha023"><img class="social-icon"
-                            src="https://cdn-icons-png.flaticon.com/512/145/145799.png" width="50" height="50"
-                            alt="Behance"></a>
-                </div>
-            </div>
-
-            <div class="content-block-item" id="content-space2"></div>
-
-            <div class="content-block-item" id="main2">
-                <p>Coming Soon</p>
-            </div>
-
-
-
-            
-
-            <div class="content-block-item" id="content-margin2"></div>
-        </div>
-
-        <div class="outer-grid" id="border-right"></div>
-    </div>
 </body>
 
 </html>
-<!-- <header class="containerGlobal">
-    <div class="column" id="column1">
-        <div class="logoContainter">
-            <img src="asset/images/Logo.png" width="32" height="32" alt="">
-            <p id="textLogo">MODOU AICHA</p>
-        </div>
-    </div>
-    <nav class="column" id="column2 "></nav>
-</header> -->
