update hero section and readme

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/homeSection.css">
     <link rel="shortcut icon" href="./asset/images/Logo.png">
     <title>Mo Loading</title>
 </head>
@@ -24,23 +24,31 @@
     </header>
     <main>
         <section id="home">
-            <h2>
-                Hi, I’m Modou Aicha Diop a developer with experience in frontEnd && backEnd developement.
-            </h2>
+            <div id="div-text-hero-section">
+                <h1 id="my-name">
+                    Modou Aicha Diop
+                </h1>
+                <h2 id="my-title">
+                    Problems solver & Developer
+                </h2>
+                <span id="text-hero-section">
+                    Merging your vision with my design. <br>
+                    Creating a unique and engaging user experience. <br>
+                    Making your brand have a lasting impact.
+                </span>
+                <button id="btn-more">
+                    more about ➡️<img class="h2-avatar" src="./asset/images/Logo.png" alt="Avatar">
+                </button>
+            </div>
+            <img id="main-img" src="./asset/images/mojinwoo.png" alt="mojinwoo">
         </section>
         <section id="about">
             <h2>ABOUT</h2>
             <p>
             </p>
         </section>
-        <section id="stack">
-            <h2>Tech Stacks</h2>
-        </section>
         <section id="projects">
             <h2>PROJECTS</h2>
-        </section>
-        <section id="education">
-            <h2>Education</h2>
         </section>
         <section id="blog">
             <h2>BLOG</h2>
@@ -51,7 +59,7 @@
             </h2>
         </section>
     </main>
-    <footer></footer>
+    <footer>Footer</footer>
     <script src="./js/index.js"></script>
 
 </body>
