update readme and add some font

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Problems solver & Developer
                 </h2>
                 <span id="text-hero-section">
-                    Merging your vision with my design. <br>
+                    Merging your <span class="outline">vision</span> with my design. <br>
                     Creating a unique and engaging user experience. <br>
                     Making your brand have a lasting impact.
                 </span>
