Update tech stack icons and remove unused image

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <a href="#">
             <img id="avatar" src="asset/images/Logo.png" alt="avatar">
         </a>
-        <a href="#">
-            <img id="menu-img" src="./asset/images/menu.png" alt="menu button">
-        </a>
+
+        <img id="menu-img" src="./asset/images/menu.png" alt="menu button">
+
     </header>
     <main>
         <section id="home">
@@ -40,7 +40,7 @@
                     more about ➡️<img class="h2-avatar" src="./asset/images/Logo.png" alt="Avatar">
                 </button>
             </div>
-            <img id="main-img" src="./asset/images/mojinwoo.png" alt="mojinwoo">
+            <!-- <img id="main-img" src="./asset/images/mojinwoo.png" alt="mojinwoo"> -->
         </section>
         <section id="about">
             <h2>ABOUT</h2>
