setup some tag , initi style

--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modou Aicha Diop | Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Giga:wght@100..900" rel="stylesheet">
+    <meta name="description"
+        content="Modou Aicha Diop Website, Freelance Software Developer from Senegal specializing in web development, mobile applications, and design solutions.">
+    <meta name="keywords"
+        content="Modou Aicha Diop, Software Developer, Web Developer, Senegal, Portfolio, Galsen Dev, Sénégal, Galsen, Senegal Freelance, modouaicha023, @modouaicha023, modou aicha diop, modou aicha, Freelance Senegal, Web Development Senegal, Mobile Apps Senegal, Web Design Senegal, Freelance Web Developer Senegal, Application Development Senegal, Mobile Developer Senegal, Site Web Senegal, Création de Site Web Senegal, Développeur Freelance Sénégal, Designer Freelance Sénégal, Application de Gestion Senegal">
+    <meta property="og:title" content="Modou Aicha Diop Portfolio | Freelance Web Developer in Senegal">
+    <meta property="og:description"
+        content="Modou Aicha Diop Website, Freelance Software Developer from Senegal specializing in web development, mobile applications, and design solutions.">
+    <meta property="og:url" content="https://modouaicha023.vercel.app">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="https://modouaicha023.vercel.app/icon.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Modou Aicha Diop">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@modouaicha023">
+    <meta name="twitter:title" content="Modou Aicha Diop Portfolio | Freelance Web Developer in Senegal">
+    <meta name="twitter:description"
+        content="Modou Aicha Diop Website, Freelance Software Developer from Senegal specializing in web development, mobile applications, and design solutions.">
+    <meta name="twitter:image" content="https://modouaicha023.vercel.app/icon.png">
+    <meta name="twitter:image:width" content="1200">
+    <meta name="twitter:image:height" content="630">
+    <meta name="twitter:image:alt" content="Modou Aicha Diop">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="256x204">
+    <link rel="stylesheet" href="./style.css">
+    <title>Modou Aicha Diop Portfolio | Freelance Software Developer in Senegal</title>
+
 </head>
 
 <body>
+    <header>
+        <img src="./public/images/ballBAsket.gif" class="basket-ball-img" />
+        <h1>Modou Aicha Diop - Software developer</h1>
+        <p>I create websites & apps that solve problems.</p>
+    </header>
+
     <main>
-        Hi there
+        <nav></nav>
+        <section></section>
+        <aside></aside>
+        <article></article>
+
+
     </main>
+    <footer></footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
