--- a/index.html
+++ b/index.html
@@ -38,21 +38,43 @@
 
 <body>
     <header>
-        <img src="./public/images/ballBAsket.gif" class="basket-ball-img" />
+        <img src="./public/images/ballBAsket.gif" class="basket-ball-img" alt="Ballon de basket" />
         <h1>Modou Aicha Diop - Software developer</h1>
         <p>I create websites & apps that solve problems.</p>
     </header>
 
     <main>
-        <nav></nav>
-        <section></section>
-        <aside></aside>
-        <article></article>
+
+        <section id="projets">
+            <h2>Mes Projets</h2>
+            <article>
+                <h3>Galsen Coding Challenge</h3>
+                <p>Une plateforme collaborative pour les développeurs sénégalais.</p>
+                <a href="https://github.com/modouaicha/galsen-coding-challenge" target="_blank">Voir le projet</a>
+            </article>
+        </section>
 
 
     </main>
     <footer></footer>
     <script src="script.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Modou Aicha Diop",
+            "jobTitle": "Développeur Web et Mobile",
+            "url": "https://modouaicha023.dev",
+            "sameAs": [
+                "https://github.com/modouaicha023",
+                "https://www.linkedin.com/in/modouaicha023",
+                "https://www.youtube.com/@modouaicha023",
+                "https://x.com/modouaicha023",
+                "https://www.instagram.com/modouaicha023"
+            ]
+        }
+    </script>
+
 </body>
 
 </html>
