--- a/index.html
+++ b/index.html
@@ -38,20 +38,174 @@
 
 <body>
     <header>
-        <img src="./public/images/ballBAsket.gif" class="basket-ball-img" alt="Ballon de basket" />
-        <h1>Modou Aicha Diop - Software developer</h1>
-        <p>I create websites & apps that solve problems.</p>
+        <img src="./public/images/ballBAsket.gif" class="basket-ball-img" alt="Basketball animation" />
+        <h1>Modou Aicha Diop - Software Developer </h1>
+        <p>Crafting websites & apps that solve real-world problems, one line of code at a time.
+        </p>
+        <img src="./public/images/Logo.png" class="logo" alt="Logo" />
     </header>
 
     <main>
 
-        <section id="projets">
-            <h2>Mes Projets</h2>
-            <article>
-                <h3>Galsen Coding Challenge</h3>
-                <p>Une plateforme collaborative pour les développeurs sénégalais.</p>
-                <a href="https://github.com/modouaicha/galsen-coding-challenge" target="_blank">Voir le projet</a>
+        <section id="projects">
+            <h2>My Projects :)</h2>
+            <div class="projects-container">
+                <!-- Projet 1 -->
+                <article class="project-card">
+                    <!-- <img src="/public/images/game-of-life.png" alt="Game Of Life Screenshot"> -->
+                    <h3>Game Of Life</h3>
+                    <p>
+                        This is a game called
+                        <span id="game-of-life">Game of Life</span> challenge. The Game of Life, also known simply as
+                        Life, is a
+                        cellular automaton devised by the British mathematician John Horton Conway in 1970.
+                    <div id="game-of-life-animation"></div>
+                    </p>
+
+                    <ul class="stack">
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <div class="links">
+                        <a href="https://modouaicha023.github.io/GameOfLife" target="_blank">
+                            <svg fill="#000000" viewBox="0 0 24 24" id="link-alt-3" data-name="Line Color" width="24px"
+                                height="24px" xmlns="http://www.w3.org/2000/svg" class="icon line-color">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <line id="secondary" x1="8" y1="12" x2="16" y2="12"
+                                        style="fill: none; stroke: #f78f8a; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                                    </line>
+                                    <path id="primary"
+                                        d="M10,9A1,1,0,0,0,9,8H4A1,1,0,0,0,3,9v6a1,1,0,0,0,1,1H9a1,1,0,0,0,1-1"
+                                        style="fill: none; stroke: #f78f8a; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                                    </path>
+                                    <path id="primary-2" data-name="primary"
+                                        d="M14,15a1,1,0,0,0,1,1h5a1,1,0,0,0,1-1V9a1,1,0,0,0-1-1H15a1,1,0,0,0-1,1"
+                                        style="fill: none; stroke: #f78f8a; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                                    </path>
+                                </g>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/modouaicha023/GameOfLife" target="_blank">
+                            <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <path opacity="0.1" fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12 3C4.5885 3 3 4.5885 3 12C3 19.4115 4.5885 21 12 21C19.4115 21 21 19.4115 21 12C21 4.5885 19.4115 3 12 3ZM14.2695 9.03471C15.1872 8.34452 15.7204 8.25293 15.9299 8.25017C16.1326 8.86788 16.1588 9.54654 16.0042 10.1835C15.9945 10.2234 15.9842 10.263 15.9731 10.3025C15.941 10.4168 15.9647 10.5393 16.0366 10.6333L16.0377 10.6347C16.0521 10.6537 16.0664 10.6728 16.0805 10.6922C16.5194 11.2949 16.7603 12.0687 16.7497 12.8714L16.7496 12.8747C16.7496 14.5738 16.3076 15.5644 15.6994 16.1583C15.0859 16.7572 14.2627 16.9938 13.4137 17.0968L13.3898 17.0997L13.3777 17.1014C12.443 17.2601 11.5456 17.2688 10.6078 17.1286L10.604 17.1281L10.5687 17.1233C9.72415 17.0085 8.90483 16.7616 8.29455 16.1566C7.68912 15.5564 7.25036 14.5643 7.25038 12.8747L7.25034 12.8714C7.23972 12.0687 7.48056 11.2949 7.91949 10.6922C7.93482 10.6711 7.9504 10.6503 7.96621 10.6297C8.03648 10.538 8.05962 10.4184 8.02812 10.3068L8.02599 10.2993C8.01523 10.2608 8.00513 10.2222 7.99569 10.1834C7.84087 9.54684 7.86561 8.86863 8.0659 8.25016C8.27679 8.2528 8.81228 8.34432 9.73045 9.03473C9.76619 9.0616 9.80249 9.08937 9.83937 9.11807C9.93139 9.19 10.0529 9.21205 10.1644 9.17703L10.1657 9.17661C10.2268 9.15768 10.2882 9.13972 10.3496 9.12272C11.4349 8.82255 12.5651 8.82255 13.6504 9.12272C13.7088 9.13888 13.7671 9.15592 13.8253 9.17382L13.8277 9.17457C13.9431 9.21015 14.0704 9.18836 14.1678 9.11252C14.2022 9.08578 14.2361 9.05985 14.2695 9.03471Z"
+                                        fill="#f78f8a"></path>
+                                    <path
+                                        d="M13.717 8.88177C12.5881 8.56954 11.4119 8.56954 10.283 8.88177C10.2637 8.8871 10.2444 8.89254 10.2252 8.89808C10.1067 8.93218 9.97923 8.909 9.8807 8.83491V8.83491C8.69311 7.94193 8.07278 7.98181 7.91927 8.01161V8.01161C7.8946 8.0164 7.87585 8.03481 7.86732 8.05844C7.86516 8.06441 7.86303 8.07038 7.8609 8.07636C7.61639 8.76505 7.57904 9.52813 7.75277 10.2425C7.76289 10.2841 7.77371 10.3255 7.78525 10.3667C7.78601 10.3694 7.78677 10.3721 7.78753 10.3748C7.79754 10.4102 7.7902 10.4483 7.7678 10.4776V10.4776C7.75074 10.4998 7.73394 10.5223 7.71741 10.545C7.24479 11.1939 6.98907 12.0213 7.00036 12.8747C7.00036 16.3399 8.80396 17.1358 10.535 17.3711L10.5708 17.3758C11.5347 17.5199 12.4587 17.511 13.4195 17.3479L13.4438 17.345C15.1832 17.1339 16.9996 16.3587 16.9996 12.8747C17.0109 12.0213 16.7552 11.1939 16.2826 10.545C16.2674 10.5242 16.252 10.5035 16.2364 10.483C16.236 10.4825 16.2356 10.482 16.2352 10.4815C16.211 10.4498 16.203 10.4085 16.2138 10.3701V10.3701C16.2257 10.3277 16.2368 10.2852 16.2471 10.2425C16.421 9.52611 16.3815 8.76076 16.1329 8.07176C16.1313 8.06753 16.1298 8.06331 16.1283 8.05909C16.1195 8.03503 16.1004 8.01628 16.0752 8.01142V8.01142C15.921 7.98164 15.3041 7.94381 14.1193 8.83491V8.83491C14.0208 8.90896 13.8933 8.93197 13.7748 8.89804C13.7556 8.89252 13.7363 8.8871 13.717 8.88177Z"
+                                        stroke="#f78f8a" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round"></path>
+                                    <path
+                                        d="M3 12C3 4.5885 4.5885 3 12 3C19.4115 3 21 4.5885 21 12C21 19.4115 19.4115 21 12 21C4.5885 21 3 19.4115 3 12Z"
+                                        stroke="#f78f8a" stroke-width="2"></path>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                </article>
+
+                <!-- Projet 2 -->
+                <article class="project-card">
+                    <!-- <img src="/public/images/galsen-mangas.png" alt="Galsen Mangas Screenshot"> -->
+                    <h3>Galsen Mangas</h3>
+                    <p>
+                        An app offering free access to anime, manga, and novels, packed with features for a seamless and
+                        enjoyable experience.
+                    </p>
+                    <ul class="stack">
+                        <li>Next.JS</li>
+                        <li>TypeScript</li>
+                    </ul>
+                    <div class="links">
+                        <a href="https://galsen-mangas.vercel.app" target="_blank">
+                            <svg fill="#000000" viewBox="0 0 24 24" id="link-alt-3" data-name="Line Color" width="24px"
+                                height="24px" xmlns="http://www.w3.org/2000/svg" class="icon line-color">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <line id="secondary" x1="8" y1="12" x2="16" y2="12"
+                                        style="fill: none; stroke: #f78f8a; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                                    </line>
+                                    <path id="primary"
+                                        d="M10,9A1,1,0,0,0,9,8H4A1,1,0,0,0,3,9v6a1,1,0,0,0,1,1H9a1,1,0,0,0,1-1"
+                                        style="fill: none; stroke: #f78f8a; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                                    </path>
+                                    <path id="primary-2" data-name="primary"
+                                        d="M14,15a1,1,0,0,0,1,1h5a1,1,0,0,0,1-1V9a1,1,0,0,0-1-1H15a1,1,0,0,0-1,1"
+                                        style="fill: none; stroke: #f78f8a; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                                    </path>
+                                </g>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/modouaicha023/galsen-mangas" target="_blank">
+                            <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <path opacity="0.1" fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12 3C4.5885 3 3 4.5885 3 12C3 19.4115 4.5885 21 12 21C19.4115 21 21 19.4115 21 12C21 4.5885 19.4115 3 12 3ZM14.2695 9.03471C15.1872 8.34452 15.7204 8.25293 15.9299 8.25017C16.1326 8.86788 16.1588 9.54654 16.0042 10.1835C15.9945 10.2234 15.9842 10.263 15.9731 10.3025C15.941 10.4168 15.9647 10.5393 16.0366 10.6333L16.0377 10.6347C16.0521 10.6537 16.0664 10.6728 16.0805 10.6922C16.5194 11.2949 16.7603 12.0687 16.7497 12.8714L16.7496 12.8747C16.7496 14.5738 16.3076 15.5644 15.6994 16.1583C15.0859 16.7572 14.2627 16.9938 13.4137 17.0968L13.3898 17.0997L13.3777 17.1014C12.443 17.2601 11.5456 17.2688 10.6078 17.1286L10.604 17.1281L10.5687 17.1233C9.72415 17.0085 8.90483 16.7616 8.29455 16.1566C7.68912 15.5564 7.25036 14.5643 7.25038 12.8747L7.25034 12.8714C7.23972 12.0687 7.48056 11.2949 7.91949 10.6922C7.93482 10.6711 7.9504 10.6503 7.96621 10.6297C8.03648 10.538 8.05962 10.4184 8.02812 10.3068L8.02599 10.2993C8.01523 10.2608 8.00513 10.2222 7.99569 10.1834C7.84087 9.54684 7.86561 8.86863 8.0659 8.25016C8.27679 8.2528 8.81228 8.34432 9.73045 9.03473C9.76619 9.0616 9.80249 9.08937 9.83937 9.11807C9.93139 9.19 10.0529 9.21205 10.1644 9.17703L10.1657 9.17661C10.2268 9.15768 10.2882 9.13972 10.3496 9.12272C11.4349 8.82255 12.5651 8.82255 13.6504 9.12272C13.7088 9.13888 13.7671 9.15592 13.8253 9.17382L13.8277 9.17457C13.9431 9.21015 14.0704 9.18836 14.1678 9.11252C14.2022 9.08578 14.2361 9.05985 14.2695 9.03471Z"
+                                        fill="#f78f8a"></path>
+                                    <path
+                                        d="M13.717 8.88177C12.5881 8.56954 11.4119 8.56954 10.283 8.88177C10.2637 8.8871 10.2444 8.89254 10.2252 8.89808C10.1067 8.93218 9.97923 8.909 9.8807 8.83491V8.83491C8.69311 7.94193 8.07278 7.98181 7.91927 8.01161V8.01161C7.8946 8.0164 7.87585 8.03481 7.86732 8.05844C7.86516 8.06441 7.86303 8.07038 7.8609 8.07636C7.61639 8.76505 7.57904 9.52813 7.75277 10.2425C7.76289 10.2841 7.77371 10.3255 7.78525 10.3667C7.78601 10.3694 7.78677 10.3721 7.78753 10.3748C7.79754 10.4102 7.7902 10.4483 7.7678 10.4776V10.4776C7.75074 10.4998 7.73394 10.5223 7.71741 10.545C7.24479 11.1939 6.98907 12.0213 7.00036 12.8747C7.00036 16.3399 8.80396 17.1358 10.535 17.3711L10.5708 17.3758C11.5347 17.5199 12.4587 17.511 13.4195 17.3479L13.4438 17.345C15.1832 17.1339 16.9996 16.3587 16.9996 12.8747C17.0109 12.0213 16.7552 11.1939 16.2826 10.545C16.2674 10.5242 16.252 10.5035 16.2364 10.483C16.236 10.4825 16.2356 10.482 16.2352 10.4815C16.211 10.4498 16.203 10.4085 16.2138 10.3701V10.3701C16.2257 10.3277 16.2368 10.2852 16.2471 10.2425C16.421 9.52611 16.3815 8.76076 16.1329 8.07176C16.1313 8.06753 16.1298 8.06331 16.1283 8.05909C16.1195 8.03503 16.1004 8.01628 16.0752 8.01142V8.01142C15.921 7.98164 15.3041 7.94381 14.1193 8.83491V8.83491C14.0208 8.90896 13.8933 8.93197 13.7748 8.89804C13.7556 8.89252 13.7363 8.8871 13.717 8.88177Z"
+                                        stroke="#f78f8a" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round"></path>
+                                    <path
+                                        d="M3 12C3 4.5885 4.5885 3 12 3C19.4115 3 21 4.5885 21 12C21 19.4115 19.4115 21 12 21C4.5885 21 3 19.4115 3 12Z"
+                                        stroke="#f78f8a" stroke-width="2"></path>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section id="expériences">
+            <h2>Mes Expériences</h2>
+            <!-- 
+                <div class="projects-container">
+            <article class="project-card">
+                <img src="/public/images/game-of-life.png" alt="Game Of Life Screenshot">
+                <h3>Game Of Life</h3>
+                <p>
+                    This is a game called Game of Life challenge. The Game of Life, also known simply as Life, is a
+                    cellular automaton devised by the British mathematician John Horton Conway in 1970.
+                </p>
+                <ul class="stack">
+                    <li>JavaScript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+                <div class="links">
+                    <a href="https://modouaicha023.github.io/GameOfLife" target="_blank">Voir le projet</a>
+                    <a href="https://github.com/modouaicha023/GameOfLife" target="_blank">GitHub</a>
+                </div>
             </article>
+
+            <article class="project-card">
+                <img src="/public/images/galsen-mangas.png" alt="Galsen Mangas Screenshot">
+                <h3>Galsen Mangas</h3>
+                <p>
+                    An app offering free access to anime, manga, and novels, packed with features for a seamless and
+                    enjoyable experience.
+                </p>
+                <ul class="stack">
+                    <li>Next.JS</li>
+                    <li>TypeScript</li>
+                </ul>
+                <div class="links">
+                    <a href="https://galsen-mangas.vercel.app" target="_blank">Voir le projet</a>
+                    <a href="https://github.com/modouaicha023/galsen-mangas" target="_blank">GitHub</a>
+                </div>
+            </article>
+            </div>
+            -->
         </section>
 
 
